--- a/Styles.css
+++ b/Styles.css
@@ -158,8 +158,12 @@
 
 
    /*Mise en page de la section 2*/
-
-   .main-accueil .section2 {
+    .main-accueil .section2 .grid {
+      display: grid;
+      grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
+      gap: 20px;
+    }
+   /*.main-accueil .section2 {
     display: flex;
     padding-bottom: 180px;
    }
@@ -188,7 +192,7 @@
     margin-right: 5px;
     }
 
-    .main-accueil .section2 h3 {
+    .main-accueil .background .section2 .section2-text h3 {
     font-family: 'beyno';
     font-weight: lighter;
     font-size: 15px;
@@ -196,7 +200,7 @@
     padding-bottom: 10px;
     }
 
-    .main-accueil .background .section2 .section-text .text {
+    .main-accueil .background .section2 .section2-text p {
     width: 90%;
     font-family: 'Cantarell';
     font-size: 10px;
@@ -221,7 +225,7 @@
 
     .main-accueil .section2 .background .image-box .image4 {
     width: 54%;
-    }
+    }*/
       
    /*Mise en page section 3*/
 
@@ -279,8 +283,9 @@
 
    .main-accueil .section3 .right .biography .identity {
     display: flex;
-    justify-content: space-between;
-    padding-bottom: 20px;
+    align-items: center;
+    justify-content: space-around;
+     padding-bottom: 20px;
    }
 
    .main-accueil .section3 .right .biography .identity p {
@@ -370,7 +375,7 @@
 
 
   /*Mise en page de la page wakanda*/
-
+  /*Première section*/
   .main-wakanda .section1 {
     background-image: url(./Images/Wakanda/Pantherwakanda1.png);
     background-position-x: center;
@@ -406,8 +411,10 @@
     padding-top: 35px;
   }
 
+  /*Deuxième section*/
+  /*Mise en forme de la partie haut de la section 2*/
   .main-wakanda .section2 {
-    margin-top: 370px;
+    margin-top: 410px;
   }
  
   .main-wakanda .section2 .background {
@@ -422,6 +429,8 @@
     margin-right: 145px;
     padding-top: 158px;
   }
+   
+  /*Mise en forme général de la partie haut et bas de la section 2 */
 
   .main-wakanda .section2 .top .left, .main-wakanda .section2 .top .right {
     width: 475px;
@@ -441,6 +450,8 @@
     text-align: justify;
     padding-bottom: 15px;
   }
+    
+   /* Mise en forme de la partie bas de la section 2*/
 
   .main-wakanda .section2 .bottom {
     display: flex;
@@ -470,21 +481,19 @@
   }
 
    /*Mise en page de la page enigme*/
+   /*Mise en forme de la section 1 enigme*/
    .main-enigme .section1 {
-    display: flex;
-   }
-
-   .main-enigme .section1 .section1-image {
+    background-image: url(./Images/Enigme/Pantherenigme1.png);
+    background-size: cover;
+    margin-top: -180px;
     height: 920px;
     width: 920px;
-    image-rendering: auto;
-    object-fit: cover;
-    margin-top: -260px;
    }
 
    .main-enigme .section1 .section1-text {
     width: 397px;
-    margin-left: -135px;
+    margin-left: 785px;
+    padding-top: 200px;
    }
    
    .main-enigme .section1 .section1-text h1 {
@@ -493,35 +502,118 @@
     font-weight: lighter;
     color: var(--light-bleu-color);
     margin-top: 165px;
-    margin-bottom: 10px;
+    margin-bottom: 45px;
    }
 
    .main-enigme .section1 .section1-text p {
     position: absolute;
-    width: 330px;
+    width: 332px;
     font-family: 'Cantarell';
     font-size: 10px;
     text-align: justify;
-    margin-top: 300px;
-    margin-bottom: 15px;
+    margin-top: 105px;
     margin-left: 87px;
    }
 
-   .main-enigme .section1 .section1-text .image2-enigme {
-    width: 492px;
-    margin-top: 200px;
+   .main-enigme .section1 .section1-image {
+    margin-left: 785px;
    }
 
-   .main-enigme .section1 .section1-text .image3-enigme {
+   .main-enigme .section1 .section1-image .image2-enigme {
     width: 492px;
    }
 
-   .main-enigme .section2 .section2-text .citation {
+   .main-enigme .section1 .section1-image .image3-enigme {
+    width: 492px;
+    position: absolute;
+    padding-top: -400px;
+   }
+
+
+   /*Mise en forme de la section 2 enigme*/
+   .main-enigme .section2 {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-left: 150px;
+    padding-right: 150px;
+   }
+
+   .main-enigme .section2 .left h2 {
+    width: 503px;
     font-family: 'WakandaForever';
     font-size: 20px;
+    line-height: 1.6;
+    word-spacing: 15px;
     color: var(--light-bleu-color);
+    padding-bottom: 55px;
    }
-   
+
+   .main-enigme .section2 .left h3 {
+    font-family: 'Cantarell';
+    font-size: 12px;
+    font-weight: lighter;
+    padding-bottom: 8px;
+   }
+
+   .main-enigme .section2 .left p  {
+    font-family: 'Cantarell';
+    font-size: 12px;
+    width: 370px;
+   }
+
+   .main-enigme .section2 .my-form {
+    display: block;
+    padding-top: 90px;
+    padding-bottom: 30px;
+   }
+
+   .main-enigme .section2 .my-form input {
+    font-family: 'Cantarell';
+    font-size: 10px;
+   }
+
+   .main-enigme .section2 .my-form input[type='text'] {
+    padding: 8px 180px 10px 25px;
+    border-radius: 25px;
+    background-color: transparent;
+    margin-bottom: 40px;
+    border-color: #FFFF;
+   }
+
+   .main-enigme .section2 .my-form input[type='submit'] {
+    padding: 10px 30px;
+    border-radius: 25px;
+    background-color: var(--light-lilac-color);
+    margin-left: 90px;
+    border-color: var(--light-lilac-color);
+   }
+
+   .main-enigme .section2 .right .para {
+   position: absolute;
+   bottom: -390px;
+   left: 740px;
+   }
+
+   .main-enigme .section2 .right h3 {
+    font-family: 'Cantarell';
+    font-size: 12px;
+    text-align: center;
+    font-weight: lighter;
+    padding-bottom: 8px;
+   }
+
+   .main-enigme .section2 .right p {
+    font-family: 'Cantarell';
+    font-size: 10px;
+    text-align: center;
+    width: 373px;
+   }
+
+   /*.main-enigme .section2 .right .image4 {
+    width: 492px;
+   }*/
+
    /*Mise en page pied de page*/
 
    footer {
