--- a/Styles.css
+++ b/Styles.css
@@ -27,6 +27,7 @@
     --pink-color: #DF99F2;
     --light-bleu-color: #9E91B7;
     --light-lilac-color: #F2CEF2;
+    --translucent-white: rgba(255, 255, 255, 0.5);
     }
 
      * {
@@ -87,7 +88,7 @@
     .main-accueil .social-media:before {
         content: "";
         width: 2px;
-        height: 400px;
+        height: 335px;
         background: var(--light-bleu-color);
         display: block;
         margin-bottom: 5px;
@@ -96,7 +97,7 @@
     .main-accueil .social-media:after {
         content: "";
         width: 2px;
-        height: 98%;
+        height: 97%;
         background: var(--light-bleu-color);
         display: block;
         margin-bottom: 5px;
@@ -107,52 +108,50 @@
     .main-accueil .social-media .bouton {
         padding-bottom: 10px;
     }
+
     /*Mise en forme de la section 1*/
     .main-accueil .section1 {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .main-accueil .section1 .section1-text {
-        width: 50%;
-        margin-top: 160px;
+        justify-content: space-around;
         padding-left: 150px;
     }
 
-    .main-accueil .section1 .section1-text h1 {
+    .main-accueil .section1 .left {
+        margin-top: 250px;
+    }
+
+    .main-accueil .section1 .left .section1-text h1 {
         font-family: 'Panthera';
-        font-size: 50px;
+        font-size: 38px;
         font-weight: 100;
         color: var(--light-bleu-color);
         margin-bottom: 12px;
     }
 
-    .main-accueil .section1 .section1-text h2 {
+    .main-accueil .section1 .left .section1-text h2 {
         font-family: 'beyno';
         font-weight: lighter;
         color: var(--light-bleu-color);
         margin-bottom: 30px;
     }
 
-    .main-accueil .section1 .section1-text .text {
-        width: 90%;
+    .main-accueil .section1 .left .section1-text p {
+        width: 323px;
         font-family: 'Cantarell';
         font-size: 10px;
         text-align: justify;
-        margin-bottom: 15px;
+        word-spacing: 1px;
     }
 
-    .main-accueil .section1 .section1-text .lien {
+    .main-accueil .section1 .left .section1-text a {
         font-family: 'Cantarell';
-        font-size: 12px;
+        font-size: 10px;
         font-weight: lighter;
         color: var(--white-color);
     }
 
-    .main-accueil .section1 .section-1text .image1 {
-        width: 60%;
-        height: 70%;
+    .main-accueil .section1 .right img {
+        width: 900px;
         margin-top: 80px;
     }
 
@@ -161,94 +160,74 @@
     .main-accueil .section2 .grid {
       display: grid;
       grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
-      gap: 20px;
-    }
-   /*.main-accueil .section2 {
-    display: flex;
-    padding-bottom: 180px;
-   }
-   
-   .main-accueil .section2 .background {
-    display: flex;
-    background-color: var(--navybleu-color);
-    height: 205px;
-   }
-
-   .main-accueil .section2 .image-box {
-    flex: 1;
-    margin-right: 5px;
-   }
-
-   .main-accueil .section2 .image-box:last-child {
-    margin-right: 0;
+      gap: 14px;
+      margin-left: 100px;
     }
 
-   .section2 .image-box .image2 {
-        width: 100%;
+    .main-accueil .section2 .background .grid {
+      background-color: var(--navybleu-color);
+      height: 210px;
+      padding-left: 40px;
     }
 
-    .main-accueil .section2 .section2-text {
-    flex: 1;
-    margin-right: 5px;
+    .main-accueil .section2 .grid .image2 img {
+      width: 260px;
+    height: 290px;
+    margin-top: -40px;
     }
 
-    .main-accueil .background .section2 .section2-text h3 {
-    font-family: 'beyno';
-    font-weight: lighter;
-    font-size: 15px;
-    color: var(--light-bleu-color);
-    padding-bottom: 10px;
+    .main-accueil .section2 .grid .section2-text {
+      width: 260px;
+      padding: 35px 7px;
     }
 
-    .main-accueil .background .section2 .section2-text p {
-    width: 90%;
-    font-family: 'Cantarell';
-    font-size: 10px;
-    text-align: justify;
-    margin-bottom: 15px;
+    .main-accueil .section2 .grid .section2-text p {
+      font-family: 'Cantarell';
+      font-size: 10px;
+      text-align: justify;
+      margin-bottom: 1px;
     }
 
-    .main-accueil .section2 .background .section2-text:last-child {
-    margin-right: 0;
-    }  
-
-    .main-accueil .section2 .background .section-text .lien {
-    font-family: 'Cantarell';
-    font-size: 12px;
-    font-weight: lighter;
-    color: var(--white-color);
+    .main-accueil .section2 .grid .section2-text h3 {
+      font-family: 'beyno';
+      font-weight: lighter;
+      font-size: 15px;
+      color: var(--light-bleu-color);
+      padding-bottom: 10px;
     }
 
-    .main-accueil .section2 .background .image-box .image3 {
-    width: 73%
+    .main-accueil .section2 .grid .section2-text a {
+      font-family: 'Cantarell';
+      font-size: 10px;
+      font-weight: lighter;
+      color: var(--white-color);
     }
 
-    .main-accueil .section2 .background .image-box .image4 {
-    width: 54%;
-    }*/
+    .main-accueil .section2 .grid .image3 img {
+      width: 200px;
+      height: 210px;
+    }
+  
+    .main-accueil .section2 .grid .image4 img {
+      width: 165px;
+      height: 210px;
+      padding-right: 0;
+    }
       
    /*Mise en page section 3*/
 
    .main-accueil .section3 {
      display: flex;
-     justify-content: center;
+     justify-content: space-around;
    }
     
-   .main-accueil .section3 .left .section3-text {
-    width: 120%;
-    margin-top: 60px;
-    margin-left: 150px;
+   .main-accueil .section3 .left .section3-text { /*Mise en forme partie gauche de la section3*/
+    width: 800px;
+    margin-top: 145px;
+    padding-left: 135px;
     } 
 
-   .main-accueil .section3 .right {
-    position: relative;
-    padding-top: 180px;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 60px;
-   }
-
-    .main-accueil .section3 .left h3 {
+  .main-accueil .section3 .left .section3-text h3 {
     font-family: 'beyno';
     font-weight: lighter;
     font-size: 15px;
@@ -256,21 +235,27 @@
     padding-bottom: 10px;   
     }
 
-    .main-accueil .section3 .left .section3-text p {
-    width: 60%;
+  .main-accueil .section3 .left .section3-text p {
+    width: 600px;
     font-size: 12px;
+    font-weight: lighter;
     text-align: justify;
     padding-bottom: 20px;
-    font-weight: lighter;
+    }
+    
+   .main-accueil .section3 .right {/*Mise en forme partie droite de la section3*/
+    position: relative;
+    padding-top: 305px;
+    padding-left: 40px;
+    padding-right: 125px;
+    padding-bottom: 60px;
    }
 
-/* Mise en page de la biographie*/
-
-   .main-accueil .section3 .right .biography {
-    width: 66%;
+   .main-accueil .section3 .right .biography {/* Mise en page de la biographie*/
+    width: 320px;
     font-size: 12px;
     background: var(--white-color);
-    padding: 155px 30px 40px 30px;
+    padding: 180px 30px 40px 30px;
     border-radius: 10px;
    }
    
@@ -291,7 +276,7 @@
    .main-accueil .section3 .right .biography .identity p {
     background-color: #3D2DA6;
     border-radius: 5px;
-    padding: 10px 16px;
+    padding: 5px 14px;
     font-size: 10px;
    }
    
@@ -308,68 +293,67 @@
    .main-accueil .section3 .right .image5 {
     position: absolute;
     width: 270px;
-    top: -3%;
-    left: 18%;
+    top: 7%;
+    left: 20%;
     transform: translateX(-12%);
    }
 
    .main-accueil .section3 .right .image6 {
-    height: 25%;
-    margin-top: 90px;
+    width: 320px;
+    height: 280px;
+    margin-top: 100px;
    }
-
-   /*.bio-text {
-    position: relative;
-    z-index: 1;
-   }
-
-   #superposed-image {
-    position: absolute;
-    top: 1900px;
-    left: 50px;
-    z-index: 2;
-   }*/
 
 /*Mise en forme formulaire*/
- 
-  .main-accueil .contact .my-form {
+
+  .main-accueil .section4 .my-form {
     position: absolute;
-    padding: 20px;
-    max-width: 400px;
-    border-radius: 25px;
-    background-color: #F2CEF2;
-    background-size: 400px;
-    background-position: center;
-    margin-left: 470px;
-    margin-top: 260px;
+    left: 360px;
+    margin-top: 250px;
+    background-image: linear-gradient(to bottom, white, rgba(255, 255, 255, 0.5));
+    padding: 45px 120px;
+    border-radius: 90px;
   }
 
-  .main-accueil .contact .my-form .contact-text {
+  .main-accueil .section4 .my-form .section4-text {
     color: black;
     text-align: center;
   }
 
-  .main-accueil .contact .my-form .my-input {
-    background-color: transparent;
+  .main-accueil .section4 .my-form .section4-text p {
+    font-size: 12px;
   }
 
-  .main-accueil .contact .my-form input, .main-accueil .contact .my-form textarea {
-    width: 100%;
-    padding: 10px;
+  .main-accueil .section4 .my-form .section4-text h2 {
+    font-size: 30px;
+    padding-bottom: 15px;
+  }
+
+  .main-accueil .section4 .my-form input {
+    padding: 10px 200px 10px 18px;
     margin-bottom: 10px;
-    border-radius: 15px;
+    border-radius: 20px;
+    background-color: transparent;
+    font-size: 10px;
+  }
+
+  .main-accueil .section4 .my-form textarea {
+    padding: 10px 200px 100px 18px;
+    margin-bottom: 10px;
+    border-radius: 20px;
     background-color: transparent;
   }
   
-  .main-accueil .contact .my-form button {
+  .main-accueil .section4 .my-form button {
     display: block;
-    width: 100%;
-    padding: 12px;
-    background-color: var(--pink-color);
-    color: white;
+    padding: 10px 35px;
+    margin-left: 130px;
+    background-color: var(--translucent-white);
+    color: black;
     border: none;
     cursor: pointer;
     border-radius: 15px;
+    font-size: 10px;
     text-align: center;
   }
 
@@ -462,12 +446,10 @@
     padding-bottom: 80px;
   }
 
-
   .main-wakanda .section2 .bottom .left, .main-wakanda .section2 .bottom .right {
     width: 475px;
    }
  
-
   .main-wakanda .section2 .left iframe {
     padding-top: 40px;
     padding-bottom: 40px;
@@ -609,10 +591,6 @@
     text-align: center;
     width: 373px;
    }
-
-   /*.main-enigme .section2 .right .image4 {
-    width: 492px;
-   }*/
 
    /*Mise en page pied de page*/
 
