Projet Black Panther

--- a/Styles.css
+++ b/Styles.css
@@ -152,6 +152,10 @@
         margin-top: 250px;
     }
 
+    .main-accueil .section1 .left .section1-text:hover {
+      transform: scale(1.2);
+    }
+
     .main-accueil .section1 .left .section1-text h1 {
         font-family: 'Panthera';
         font-size: 38px;
@@ -187,6 +191,9 @@
         margin-top: 80px;
     }
    
+    .main-accueil .section1 .right img:hover {
+      transform: scale(1.2);
+    }
 
    /*Mise en page de la section 2*/
     .main-accueil .section2 .grid {
@@ -401,6 +408,7 @@
       transform: translateX(0);
     }
   } 
+  
 
   .main-accueil .section4 .my-form .section4-text {
     color: hsl(0 0% 0%);
@@ -430,22 +438,67 @@
     border-radius: 20px;
     background-color: transparent;
   }
-  
-  .main-accueil .section4 .my-form button {
-    display: block;
+
+  .main-accueil .section4 .my-form .button {
+    font-size: 10px;
     padding: 10px 35px;
     margin-left: 130px;
-    background-color: var(--white-color);
     color: hsl(0 0% 0%);
+    background-color: var(--white-color);
     border: none;
-    cursor: pointer;
     border-radius: 15px;
-    font-size: 10px;
-    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    transition: all 0.3s ease-out;
   }
-  /*Animation bouton des formulaires*/
-  .main-accueil .section4 .my-form button:hover {
+  .main-accueil .section4 .my-form .button:hover {
     box-shadow: 0 0 5px white;
+  }
+  
+  .main-accueil .section4 .my-form .overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+  }
+  .main-accueil .section4 .my-form .overlay:target {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .main-accueil .section4 .my-form .popup {
+    margin: 70px auto;
+    padding: 10px 40px 5px 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 30%;
+    position: relative;
+    transition: all 5s ease-in-out;
+  }
+
+  .main-accueil .section4 .my-form .popup .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    transition: all 200ms;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #333;
+  }
+  .main-accueil .section4 .my-form .popup .close:hover {
+    color: #f72b08;
+  }
+
+  .main-accueil .section4 .my-form .popup .content {
+    max-height: 30%;
+    overflow: auto;
+    color: hsl(0 0% 0%);
   }
 
   /*Mise en page de la page wakanda*/
@@ -800,6 +853,10 @@
     padding-left: 135px;
    }
 
+   footer .box-footer .left:hover {
+    transform: scale(1.2);
+   }
+
    footer .box-footer .left .image-footer1 {
     width: 48%;
     padding-top: 60px;
@@ -810,6 +867,10 @@
     position: absolute;
     padding-top: 152px;
     padding-left: 129px;
+   }
+
+   footer .box-footer .left .image-footer2:hover {
+    filter: invert(10%) sepia(75%) saturate(7463%) hue-rotate(256deg) brightness(98%) contrast(92%);
    }
    
    footer .box-footer .right {
@@ -824,6 +885,10 @@
    footer .box-footer .right .footer-content .social-media-footer .icon {
     width: 17%;
     padding-right: 13px;
+   }
+
+   footer .box-footer .right .footer-content .social-media-footer .icon:hover {
+    transform: scale(1.2);
    }
 
    footer .box-footer .right .text-footer {
